--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,9 @@
+header {
+    height: 500px;
+    width: 300px;
+    background-color: black;
+}
 .header-logo {
     text-align: center;
     font-size: 20px;
-}
-header {
-    height: 100px;
-    background-color: black;
 }
