--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,7 @@ header {
     height: 500px;
     width: 100%;
     background-color: black;
+    font: white;
 }
 .header-logo {
     text-align: center;
