--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,9 +3,10 @@ header {
     width: 100%;
     background-color: black;
     font: white;
-    display: flex
+    display: flex;
 }
 .header-logo {
     text-align: center;
     font-size: 20px;
+    padding: 50px;
 }
