--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,14 +2,15 @@ header {
     height: 500px;
     width: 100%;
     background-color: black;
-    font: white;
-    display: flex;
 }
 .header-logo {
     text-align: center;
     font-size: 20px;
     padding: 50px;
+    font: white;
 }
 header li {
     padding: 30px;
+    font: white;
+    float: left;
 }
