--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,6 +13,9 @@ header li {
     padding: 30px;
     float: left;
 }
+.top-wrapper{
+    height: 300px;
+}
 .menu-icon {
     width: 100%;
     float: left;
