--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,6 @@
+ul {
+    list-style: none;
+  }
 header {
     height: 300px;
     width: 100%;
@@ -18,7 +21,7 @@ header li {
 }
 .menu-icon {
     width: 100%;
-    float: left;
+    display: flex;
 }
 .menu {
     width: 20%;
