--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@ ul {
     list-style: none;
   }
 header {
-    height: 300px;
+    height: 350px;
     width: 100%;
     background-color: black;
     color: white;
@@ -10,7 +10,7 @@ header {
 .header-logo {
     text-align: center;
     font-size: 100px;
-    padding: 50px;
+    padding: 30px;
 }
 header li {
     padding: 30px;
@@ -26,5 +26,5 @@ header li {
 }
 .menu {
     width: 25%;
-    margin-top: 50px;
+    margin: 30px;
 }
